--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ mpl-token-metadata = "4.1.2"
 # Error handling
 anyhow = "1.0.89"
 
-# Logging
+# Other
 log = "0.4.22"
 env_logger = "0.11.5"
 base64 = "0.22.1"
@@ -54,6 +54,7 @@ http = "1.1.0"
 uuid = { version = "1.10.0", features = ["v4", "serde"] }
 console-subscriber = "0.4.0"
 dashmap = { version = "6.1.0", features = ["serde", "inline"] }
+reqwest = { version = "0.12.8", features = ["json"] }
 
 [patch.crates-io.aes-gcm-siv]
 git = "https://github.com/RustCrypto/AEADs"
