--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,25 +16,27 @@ config = "0.14.0"
 # Serialization/deserialization
 borsh = "1.5.1"
 borsh-derive = "1.5.1"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
+serde = { version = "1.0.213", features = ["derive"] }
+serde_json = "1.0.132"
 
 # Asynchronous runtime
-tokio = { version = "1.40.0", features = ["full", "tracing"] }
+tokio = { version = "1.41.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.7.12", features = ["time", "rt"] }
 tungstenite = "0.24.0"
 tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
 
 # Solana blockchain interaction
-solana-client = "2.0.13"
-solana-sdk = { version = "2.0.13", features = ["serde_json"] }
-solana-program = "2.0.13"
-solana-account-decoder = "2.0.13"
-solana-transaction-status = "2.0.13"
+solana-client = "2.0.14"
+solana-quic-client = "2.0.14"
+solana-sdk = { version = "2.0.14", features = ["serde_json"] }
+solana-program = "2.0.14"
+solana-account-decoder = "2.0.14"
+solana-transaction-status = "2.0.14"
 spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
 spl-associated-token-account = "5.0.1"
 
 mpl-token-metadata = "4.1.2"
+jito-sdk-rust = "0.1.0"
 
 # Error handling
 anyhow = "1.0.89"
