--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ console-subscriber = "0.4.0"
 dashmap = { version = "6.1.0", features = ["serde", "inline"] }
 reqwest = { version = "0.12.8", features = ["json"] }
 bincode = "1.3.3"
+rand = "0.8.5"
 
 [patch.crates-io.aes-gcm-siv]
 git = "https://github.com/RustCrypto/AEADs"
