--- a/config/default.yml
+++ b/config/default.yml
@@ -51,6 +51,10 @@ trader:
   # If enabled, the bot will close all open trades on shutdown by current price.
   close_trades_on_shutdown: true
 
+  # Maximum number of open trades. Trader will not open new trades
+  # for the new pairs if the limit is reached.
+  max_open_trades: 10
+
   # List of conditions that can be used to choose the strategy.
   # Any condition with a value of 0 or commented out will be ignored.
   strategies:
@@ -152,19 +156,29 @@ trader:
       # Zero means any price impact is allowed.
       max_price_impact: 0.0
 
+      # The volatility filter designed to detect scams by monitoring the price
+      # volatility of a token after a buy order. If the price volatility remains
+      # below a specified threshold within a certain time frame, the bot will sell
+      # the tokens immediately to avoid potential losses.
+      volatility_filter:
+        enabled: false
+        change_percent: 5.0 # The percentage change in price.
+        timeout: 50000 # Timeout in milliseconds before checking the volatility.
+        window: 15000 # Window in milliseconds during which the filter can be applied.
+
       # After holding the token for the hold_time, the bot will
       # execute the sell order automatically by current price.
       hold_time: 60000 # Hold time in milliseconds.
       take_profit: 35.0 # Take profit percentage.
-      stop_loss: 50.0 # Stop loss percentage.
+      stop_loss: 15.0 # Stop loss percentage.
       take_profit_executor: "jito"
       stop_loss_executor: "jito"
 
       # The bribes are used to incentivize the validators to include the transaction
       # in the block. It will be used only if Bloxroute is enabled and auth token is provided.
       # It is recommended to use a 70/30 split between priority fee and jito tip
-      buy_bribe: 0.003 # The bribe amount in SOL.
-      sell_bribe: 0.003
+      buy_bribe: 0.0005 # The bribe amount in SOL.
+      sell_bribe: 0.0005
 
 executor:
   # If enabled, the bot will use the TPU client to send transactions directly to leader.
@@ -174,5 +188,5 @@ executor:
   build_tx_via_bloxroute: false
 
   # Settings for tx fees and limits.
-  compute_unit_limit: 90000 # The maximum unit limit for the transaction.
-  compute_unit_price: 7000000 # In lamports.
+  compute_unit_limit: 100000 # The maximum unit limit for the transaction.
+  compute_unit_price: 4000000 # In lamports.
