--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,15 @@ license = "GPL-3"
 
 [dependencies]
 # Command-line argument parsing
-clap = { version = "4.5.18", features = ["derive"] }
+clap = { version = "4.5.20", features = ["derive"] }
 
 # Configuration management
-config = "0.14.0"
+config = "0.14.1"
 
 # Serialization/deserialization
 borsh = "1.5.1"
 borsh-derive = "1.5.1"
-serde = { version = "1.0.213", features = ["derive"] }
+serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 
 # Asynchronous runtime
@@ -26,17 +26,16 @@ tungstenite = "0.24.0"
 tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
 
 # Solana blockchain interaction
-solana-client = "2.0.14"
-solana-quic-client = "2.0.14"
-solana-sdk = { version = "2.0.14", features = ["serde_json"] }
-solana-program = "2.0.14"
-solana-account-decoder = "2.0.14"
-solana-transaction-status = "2.0.14"
-spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
-spl-associated-token-account = "5.0.1"
+solana-client = "2.1.0"
+solana-quic-client = "2.1.0"
+solana-sdk = { version = "2.1.0", features = ["serde_json"] }
+solana-program = "2.1.0"
+solana-account-decoder = "2.1.0"
+solana-transaction-status = "2.1.0"
+spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
+spl-associated-token-account = "6.0.0"
 
-mpl-token-metadata = "4.1.2"
-jito-sdk-rust = "0.1.0"
+mpl-token-metadata = "5.0.0-beta.0"
 
 # Error handling
 anyhow = "1.0.89"
